[package]
name = "tubez"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.19"
hyper = { version = "0.14.18", features = ["http2", "tcp"] }
log = "0.4.17"
serde_json = "1.0.79"
simple_logger = "2.2.0"
tokio = { version = "1.15.0", features = ["rt-multi-thread", "macros"] }

[dev-dependencies]
clap = { version = "3.2.13", features = ["derive"] }

[features]
client = [
  "hyper/client",
]
server = [
  "hyper/server",
]
