[package]
name = "tube"
version = "0.0.1"
edition = "2021"
repository = "https://github.com/jeffmo/tube"
license = "MIT"
readme = "README.md"
description = "Tube is an abstraction over http2/3 (and, eventually, websocket and webtransport) for establishing long-lived, uni- and bi-directional streams of binary data (called a 'Tube') between a client and a server with an extremely simple API."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.19"
hyper = { version = "0.14.18", features = ["http2", "tcp"] }
log = "0.4.17"
serde_json = "1.0.79"
simple_logger = "2.2.0"
tokio = { version = "1.15.0", features = ["rt-multi-thread", "macros"] }

[dev-dependencies]
clap = { version = "3.2.13", features = ["derive"] }

[features]
client = [
  "hyper/client",
]
server = [
  "hyper/server",
]
