[package]
name = "tubez"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.19"
futures-util = { version = "0.3.21", optional = true }
hyper = { version = "0.14.18", features = ["http2", "tcp"] }
serde_json = "1.0.79"
tokio = { version = "1.15.0", features = ["rt-multi-thread", "macros"] }

[features]
client = [
  "hyper/client",
]
server = [
  "dep:futures-util",
  "hyper/server",
]
