[package]
name = "tubez_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.19"
futures-util = "0.3.21"
hyper = { version = "0.14.18", features = ["full"] }
tokio = { version = "1.15.0", features = ["rt", "macros"] }
tubez_common = { path = "../tubez_common" }
