[package]
name = "client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
futures = "0.3.19"
tokio = { version = "1.15.0", features = ["rt-multi-thread", "macros"] }
tubez_client = { path = "../../tubez_client" }
